--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -20,3 +20,43 @@ details summary::before {
 details[open] summary::before {
   transform: rotate(90deg); /* rotate when open */
 }
+
+
+/* Tab container */
+.tab {
+  overflow: hidden;
+  border-bottom: 2px solid #555;
+  background-color: #111; /* dark background */
+}
+
+/* Tab buttons */
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 12px 20px;
+  transition: 0.3s;
+  color: white;
+  font-weight: bold;
+}
+
+/* Hover effect */
+.tab button:hover {
+  background-color: #333;
+}
+
+/* Active tab */
+.tab button.active {
+  background-color: #222;
+  border-bottom: 3px solid #00BFFF;
+}
+
+/* Tab content */
+.tabcontent {
+  display: none;
+  padding: 20px 0;
+  border-top: none;
+  color: white;
+}
